# example_fastapi

./: .gitignore  CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  FILE_GUIDE.md  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  START_HERE.md  START_HERE.txt  github.txt  pyproject.toml  requirements.txt
app/: __init__.py  main.py  model_predictor.py  predictor.py  weather_api.py  weather_fetcher.py
app/models/precipitation_fall/: PUT_YOUR_MODELS_HERE.txt  README.md
app/models/rain_or_not/: PUT_YOUR_MODELS_HERE.txt  README.md
