[tool.poetry]
name = "weather-api"
version = "1.0.0"
description = "Weather Prediction API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
requests = "^2.32.0"
pytz = "^2025.2"
joblib = "^1.4.0"
scikit-learn = "^1.5.0"
numpy = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
